finallize auth routing backend-frontend
