# api/controllers/auth.js
@@ -1,25 +1,40 @@
 const jwt = require('jsonwebtoken');
 const User = require('../models/User');
+const { validateEmail, validatePassword } = require('../utils/validators');
 
-// Register a new user
-const register = async (req, res, next) => {
+const register = async (req, res) => {
   const { username, email, password, role } = req.body;
 
+    if (!validateEmail(email)) {
+      return res.status(400).json({ message: 'Invalid email format.' });
+    }
+
+    if (!validatePassword(password)) {
+      return res.status(400).json({ message: 'Password must be more than 4 characters long.' });
+    }
+
   try {
+    const existingEmail = await User.findOne({ email });
+    if (existingEmail) {
+      return res.status(400).json({ message: 'Email is already in use.' });
+    }
+
     const user = new User({ username, email, password, role });
     await user.save();
-    res.json({ message: 'Registration successful' });
+
+    res.status(201).json({ message: 'Registration successful' });
   } catch (error) {
-    next(error);
+    console.error('Registration error:', error);
+    res.status(500).json({ message: 'Server error' });
   }
 };
 
 // Login with an existing user
 const login = async (req, res, next) => {
-  const { username, password } = req.body;
+  const { email, password } = req.body;
 
   try {
-    const user = await User.findOne({ username });
+    const user = await User.findOne({ email });
     if (!user) {
       return res.status(404).json({ message: 'User not found' });
     }
